# giacenza

./: .cabal-fmt-563131-0ovKJn2CrZVB  .cabal-fmt-563131-xkTKC6914Egp  .dockerignore  .gitignore  404.html  CNAME  ChangeLog.md  Dockerfile  Makefile  README.md  cabal.project  default.nix  flake.nix  fourmolu.yaml  giacenza.cabal  index.html  justfile  mkdocs.yml  package.yaml  release.nix  result  sitemap.xml  stack.yaml
.github/workflows/: ci.yaml  deploy-docs.yaml
app/: Main.hs
docker/: Dockerfile
docs/: index.md  tutorial.md
nix/: hix.nix
search/: search_index.json
src/: API.hs  Compute.hs  Configuration.hs  Form.hs  Header.hs  Lib.hs  Server.hs  State.hs  Types.hs
src/Interactions/: Language.hs  SSE.hs
src/Logic/: Invariants.hs  Language.hs  Program.hs  Serve.hs
src/Logic/Interpreter/: Synchronous.hs
src/Pages/: About.hs  AddFile.hs  Form.hs  ListFiles.hs  Page.hs  Result.hs  Types.hs
src/Streaming/: Servant.hs
test/: Spec.hs
tutorial/: index.html
