cabal-version: 1.12


name:           giacenza
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/giacenza#readme>
homepage:       https://github.com/githubuser/giacenza#readme
bug-reports:    https://github.com/githubuser/giacenza/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/giacenza

library
  exposed-modules:
      Compute
      API
      Form
      Types
      Streaming.Servant
  other-modules:
      Paths_giacenza
  hs-source-dirs:
      src
  ghc-options: -Werror -O2
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , filepath
    , foldl
    , mtl
    , protolude
    , streaming
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , time
    , turtle
    , vector
    , attoparsec
    , streaming-bytestring
    , time-lens
    , lens
    , text
    , unordered-containers
    , servant
    , servant-server
    , warp
    , aeson
    , lucid
    , http-media
    , servant-multipart
    , wai-logger
    , wai-extra
  default-language: Haskell2010

executable giacenza
  main-is: Main.hs
  other-modules:
      Paths_giacenza
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2 -Werror
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , filepath
    , foldl
    , giacenza
    , mtl
    , protolude
    , streaming
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , time
    , turtle
    , vector
  default-language: Haskell2010

test-suite giacenza-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_giacenza
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , filepath
    , foldl
    , giacenza
    , mtl
    , protolude
    , streaming
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , time
    , turtle
    , vector
    , hspec
    , interpolate
  default-language: Haskell2010
