cabal-version: 1.12


name:           giacenza
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/paolino/giacenza#readme>
homepage:       https://github.com/paolino/giacenza#readme
bug-reports:    https://github.com/paolino/giacenza/issues
author:         Author name here
maintainer:     paolo.veronelli@gmail.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/paolino/giacenza

library
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns


  exposed-modules:
      Compute
      Configuration
      Header
      Interactions.Language
      Interactions.SSE
      Logic.Interpreter.Synchronous
      Logic.Invariants
      Logic.Language
      Logic.Serve
      Logic.Program
      Pages.About
      Pages.Form
      Pages.Page
      Pages.Result
      Pages.Types
      Pages.AddFile
      Pages.ListFiles
      Server
      Streaming.Servant
      Types

  other-modules:
      Paths_giacenza
  hs-source-dirs:
      src
  ghc-options: -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , aeson
    , async
    , attoparsec
    , bytestring
    , cassava
    , containers
    , cookie
    , directory
    , polysemy
    , filepath
    , foldl
    , hashable
    , http-media
    , http-api-data
    , lens
    , lucid
    , mtl
    , protolude
    , random
    , servant
    , servant-multipart
    , servant-server
    , stm
    , streaming
    , streaming-bytestring
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , text
    , time
    , time-lens
    , turtle
    , unordered-containers
    , vector
    , wai-extra
    , wai-logger
    , warp
  default-language: Haskell2010

executable giacenza
  main-is: Main.hs
  other-modules:
      Paths_giacenza
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , filepath
    , foldl
    , giacenza
    , mtl
    , protolude
    , streaming
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , time
    , turtle
    , vector
  default-language: Haskell2010

test-suite giacenza-test
   default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_giacenza
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , filepath
    , foldl
    , giacenza
    , hspec
    , interpolate
    , mtl
    , polysemy
    , protolude
    , streaming
    , streaming-cassava
    , streaming-commons
    , streaming-nonempty
    , streaming-with
    , time
    , turtle
    , vector
  default-language: Haskell2010
